--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,351 @@
-/* место для вашего кода */
+/*Header Styles*/
+
+.header {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    text-underline-offset: 4px;
+    display: grid;
+    padding: 92px 24px 96px;
+    grid-template:  1fr / 1fr 143px 1fr;
+    gap: 10px;
+}
+
+.header__menu {
+    display: flex;
+    justify-content: center;
+    font-size: 18px;
+    font-weight: 400;
+    letter-spacing: 0.1px;
+}
+
+.header__links-list {
+    display: flex;
+    flex-direction: row;
+    gap: 32px;
+    list-style: circle;
+    align-self: center;
+}
+
+.header__links-list-item_no-bullit {
+    list-style: none;
+}
+
+.header__link {
+    text-decoration: underline;
+}
+
+.header__link-active {
+    text-decoration: none;
+}
+
+.header__logo {
+    width: 148px;
+    height: 105px;
+    justify-self: center;
+}
+
+.header__logo-image {
+    width: inherit;
+    height: inherit;
+}
+
+.address {
+    color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-style: normal;
+    font-size: 18px;
+    font-weight: 400;
+    letter-spacing: 0.10px;
+    line-height: 24px;
+}
+
+.header__address {
+    justify-self: end;
+    width: 264px;
+}
+
+/*Main Styles Cover Section*/
+
+.overlay {
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    position: absolute;
+}
+
+.cover {
+    color: white;
+    position: relative;
+    background-image: url(../images/cover.jpg);
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    text-transform: uppercase;
+    z-index: 0;
+
+}
+
+.cover__title {
+    padding: 165px 50px 0px;
+    font-size: 100px;
+    font-family: Raleway;
+    font-weight: 700;
+    line-height: 115px;
+    letter-spacing: 30px;
+}
+
+.aligned-text {
+    display: block;
+}
+
+.aligned-text_center {
+    display: block;
+    text-align: center;
+    line-height: 140px;
+}
+
+.aligned-text_right {
+    display: block;
+    text-align: right;
+    line-height: 100px;
+}
+
+.letter-spacing-extended {
+    letter-spacing: 60px;
+}
+
+.no-letter-spacing {
+    letter-spacing: 0;
+}
+
+.cover__description {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 134px;
+    padding-bottom: 51px;
+}
+
+.cover__description-text {
+    font-size: 22px;
+    word-spacing: 18.5px;
+    padding-left: 78px;
+}
+
+.bet-button {
+    color: white;
+    font-size: 22px;
+    font-weight: 500;
+    text-transform: uppercase;
+    background: transparent;
+    width: 256px;
+    height: 51px;
+    margin-right: 50px;
+    border: 1px solid white ;
+}
+
+/*Main Styles Lots Section*/
+
+.lots {
+    display: grid;
+    grid-template: 45px 620px 23px / repeat(3, 1fr);
+    grid-auto-flow: column;
+    padding-top: 179px;
+    padding-bottom: 186px;
+}
+
+.lots__heading {
+    color: black;
+    font-size: 40px;
+    font-weight: 700;
+    text-transform: uppercase;
+    width: 100%;
+    height: 100%;
+    padding-left: 64px;
+}
+
+.lots__card-list {
+   display: flex;
+   grid-column: span 3;
+   align-items: center;
+   justify-content: center;
+   gap: 25px;
+   list-style: none;
+   flex-grow: 1
+}
+
+.lots__card-list-item {
+    align-items: center;
+    width: 334px;
+    min-height: 563px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    min-height: 563px;
+    justify-content: space-between;
+    align-items: center;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    z-index: -2;
+}
+
+.card-link {
+    text-decoration: none;
+} 
+
+.card__title { 
+    color: white;
+    font-size: 22px;
+    text-decoration: underline 1px;
+    text-underline-offset: 3px;
+    text-transform: uppercase;
+    line-height: 26px;
+    padding: 51px 40px 0;
+}
+
+.card__text {
+    color: white;
+    font-size: 20px;
+    line-height: 24px;
+    padding: 0 41px 50px;
+}
+
+.card_type_film {
+    background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book {
+    background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+    background-image: url(../images/card-lot-03.jpg);
+}
+
+.lots__look-more-link {
+    color: black;
+    font-size: 20px;
+    padding: 3px 0 0 64px;
+    text-decoration: underline;
+    text-underline-offset: 5px;
+}
+
+/*Main Styles About Section*/
+
+.about {
+    display: grid;
+    grid-template: 235px 325px / repeat(3, 1fr);
+    padding-bottom: 180px;
+}
+
+.about__logo {
+    background-color: black;
+    border-radius: 100%;
+    max-height: 240px;
+    max-width: 240px;
+    justify-self: center;
+    align-self: center;
+    padding: 64px 46px 63px;
+    margin-left: 16px;
+}
+
+.about__title {
+    grid-column: span 2;
+    color: black;
+    font-size: 40px;
+    font-weight: 700;
+    text-transform: uppercase;
+    align-self: center;
+    justify-self: start;
+    padding: 11px 0 0 17px;
+}
+
+.about__text {
+    display: grid;
+    grid-template: 1fr 1fr/ 1fr;
+    grid-column: 2 / 4;
+    color: black;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.10px;
+}
+
+.about__text :first-child,
+.about__text :nth-child(2) {
+   display: block;
+   padding-left: 17px;
+   padding-right: 21px;
+   padding-top: 10px;
+}
+
+.about__text :nth-child(2) {
+    padding-top: 25px;
+    padding-right: 26px;
+    letter-spacing: 0.05px;
+}
+
+/*Footer Styles*/
+
+.footer {
+    display: grid;
+    grid-template: 1fr / repeat(3, 1fr);
+    grid-auto-flow: column;
+    text-underline-offset: 4px;
+    align-items: start;
+    padding-bottom: 88px;
+}
+
+.footer__address {
+    justify-self: start;
+    padding-left: 50px;
+}
+
+.footer__menu {
+    display: flex;
+    justify-content: center;
+    font-size: 18px;
+    font-weight: 400;
+    letter-spacing: 0.1px;
+}
+
+.footer__links-list {
+    display: flex;
+    flex-direction: column;
+    list-style: circle;
+    align-self: center;
+    align-items: center;
+    list-style: none;
+}
+
+.footer__link {
+    text-decoration: underline;
+}
+
+.footer__link-active {
+    text-decoration: none;
+}
+
+.footer__social-list {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    gap: 48px;
+    padding: 0 48px 0 76px;
+    justify-content: space-between;
+}
+
+.footer__social-list-item {
+    width: 48px;
+    height: 48px;
+}
