--- a/styles/style.css
+++ b/styles/style.css
@@ -64,7 +64,8 @@
 
 .header__address {
     justify-self: end;
-    width: 264px;
+    max-width: 300px;
+    padding: 0 60px 0 0;
 }
 
 /*Main Styles Cover Section*/
@@ -74,6 +75,7 @@
     width: 100%;
     height: 100%;
     z-index: -1;
+    inset: 0;
     position: absolute;
 }
 
@@ -93,7 +95,7 @@
 .cover__title {
     padding: 165px 50px 0px;
     font-size: 100px;
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     font-weight: 700;
     line-height: 115px;
     letter-spacing: 30px;
@@ -138,6 +140,7 @@
 }
 
 .bet-button {
+    font-family: Raleway, sans-serif; 
     color: white;
     font-size: 22px;
     font-weight: 500;
@@ -153,10 +156,10 @@
 
 .lots {
     display: grid;
-    grid-template: 45px 620px 23px / repeat(3, 1fr);
+    grid-template: repeat(3, auto)/ repeat(3, 1fr);
     grid-auto-flow: column;
     padding-top: 179px;
-    padding-bottom: 186px;
+    padding-bottom: 182px;
 }
 
 .lots__heading {
@@ -170,13 +173,15 @@
 }
 
 .lots__card-list {
+   padding-top: 25px ;
    display: flex;
    grid-column: span 3;
-   align-items: center;
+   align-items: stretch;
    justify-content: center;
    gap: 25px;
    list-style: none;
-   flex-grow: 1
+   flex-grow: 1;
+   flex-wrap: wrap;
 }
 
 .lots__card-list-item {
@@ -190,7 +195,6 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    min-height: 563px;
     justify-content: space-between;
     align-items: center;
     background-position: center;
@@ -235,7 +239,7 @@
 .lots__look-more-link {
     color: black;
     font-size: 20px;
-    padding: 3px 0 0 64px;
+    padding: 30px 0 0 64px;
     text-decoration: underline;
     text-underline-offset: 5px;
 }
@@ -244,8 +248,8 @@
 
 .about {
     display: grid;
-    grid-template: 235px 325px / repeat(3, 1fr);
-    padding-bottom: 180px;
+    grid-template: repeat(2, auto) / repeat(3, 1fr);
+    padding-bottom: 179px;
 }
 
 .about__logo {
@@ -267,34 +271,26 @@
     text-transform: uppercase;
     align-self: center;
     justify-self: start;
-    padding: 11px 0 0 17px;
+    padding: 10px 0 0 17px;
 }
 
 .about__text {
     display: grid;
-    grid-template: 1fr 1fr/ 1fr;
+    grid-template: repeat(2, auto)/ 1fr;
     grid-column: 2 / 4;
     color: black;
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
     letter-spacing: 0.10px;
+    gap: 15px
 }
 
-.about__text :first-child,
-.about__text :nth-child(2) {
+
+.about__text-paragraph {
    display: block;
-   padding-left: 17px;
-   padding-right: 21px;
-   padding-top: 10px;
+   padding: 10px 21px 0 15px ;
 }
-
-.about__text :nth-child(2) {
-    padding-top: 25px;
-    padding-right: 26px;
-    letter-spacing: 0.05px;
-}
-
 /*Footer Styles*/
 
 .footer {
